--- a/tratamento_de_excecoes/try_Catch.html
+++ b/tratamento_de_excecoes/try_Catch.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Try...Catch(error)</h1>
     <div id="output"></div>
+    <div id="output2"></div>
 
     <script>
         let obj = {
@@ -37,15 +38,29 @@
 
         <script src="areas.js"></script>
         <script>
+            document.querySelector('#output2')
+
+            // Área do retângulo
             try {
                 console.log(calculaAreaDoRetangulo(2, 8))
             } catch(e){
                 alert('Deu ruim ' + e.message)
             }
 
+            // Área do triângulo
             try{
                 let areaTriangulo = calculaAreaDoTriangulo(4, 5)
                 document.querySelector('#output').innerHTML = `A área do triângulo é ${areaTriangulo}`
+
+            } catch(e){
+                console.log(e)
+            }
+
+            // Área do triângulo
+
+            try{
+                let areaCirculo = calculaAreaDoCirculo(5)
+                document.querySelector('#output2').innerHTML = `A área do circulo é ${areaCirculo}`
 
             } catch(e){
                 console.log(e)
